<resources>
	<string name="app_name">GSAN - Impressão Simultânea</string>
	<string name="titulo_principal">Bem vindo ao Sistema de Impressão Simultânea</string>
	<string name="db_erro">Erro ao acessar o banco de dados</string>
	<string name="db_erro_inserir_registro">Erro ao inserir o registro</string>
	<string name="db_erro_deletar_registro">Erro ao apagar o registro</string>
	<string name="db_erro_pesquisar_registro">Erro ao consultar o registro</string>
	<string name="str_sim">Sim</string>
	<string name="str_nao">Não</string>
	<string name="str_geral_bt_cancela">Cancelar</string>
	<string name="str_geral_bt_confirmar">Confirmar</string>
	<string name="str_ativar">Ativar</string>
	<string name="str_desativadar">Desativar</string>
	<string name="str_login_user">Login: </string>
	<string name="str_login_pass">Senha: </string>
	<string name="str_login_login">ENTRAR</string>
	<string name="str_sair_login">SAIR</string>
	<string name="str_login_alert_title">ISC</string>
	<string name="str_login_alert_wrong_date">A data atual do celular não está na faixa de diferença de dias aceitavéis.</string>
	<string name="str_versao_desatualizada">Versão desatualizada! A aplicação será fechada.</string>
	<string name="str_login_invalido">O login %1$s não existe. Informe outro.</string>
	<string name="str_senha_invalida">Senha inválida.</string>
	<string name="str_login_branco">Informe o login.</string>
	<string name="str_senha_branco">Informe a senha</string>
	<string name="str_login_rota_completa_pendente">Rota pendente com arquivo completo gerado. Enviar o arquivo ao supervisor&#8230;</string>
	<string name="str_login_rota_pendente">Rota pendente, tentando enviar&#8230;</string>
	<string name="str_matricula">Matrícula</string>
	<string name="str_data">Data</string>
	<string name="str_imovel">Imóvel</string>
	<string name="str_anormalidade">Anormalidade</string>
	<string name="str_informe_foto_anormalidade_imovel">Informe foto da anormalidade do imóvel.</string>
	<string name="str_procurar_impressora">Procurar Impressoras</string>
    <string name="bt_not_enabled_leaving">Bluetooth não esta habilitado.</string>
    <string name="titulo_conectando">Conectando..</string>
    <string name="procurando_dispositivos">Procurando novos dispositivos&#8230;</string>
    <string name="selecionar_dispositivo">Selecione a impressora a conectar.</string>
	<string name="dispositivo_nao_pareado">Nenhuma impressora pareada.</string>
    <string name="sucesso_conecao">Impressora Configurada Com Sucesso</string>
    <string name="falha_conecao">Não foi possivel se conectar à impressora.</string>
	<string name="str_nenhuma_impressora_configurada">Nenhuma impressora configurada.</string>
	<string name="str_lista_impressora_titulo">LISTA DE IMPRESSORAS</string>
	<string name="str_erro_impressora">%1$s Deseja tentar novamente ?</string>
	<string name="str_parar_pesquisa_impressora">Parar</string>
	<string name="str_pesquisar_novamente_impressora">Pesquisar Novamente</string>
	<string name="str_menu_principal">Menu Principal</string>
	<string name="str_menu_lista">Lista de Imóveis</string>
	<string name="str_menu_lista_legenda">Listagem dos imóveis cadastrados</string>
	<string name="str_menu_finaliza">Finalizar roteiro </string>
	<string name="str_menu_finaliza_legenda">Selecione o roteiro para ser finalizado</string>
	<string name="str_menu_consulta">Consultar Imóveis </string>
	<string name="str_menu_consulta_legenda">Consulta imóveis de acordo com o filtro</string>
	<string name="str_menu_impressora">Selecionar Impressora</string>
	<string name="str_menu_impressora_legenda">Configurar Nova impressora</string>
	<string name="str_menu_relatorio">Relatórios</string>
	<string name="str_menu_relatorio_legenda">Gerar relatório e resumo por quadra</string>
	<string name="str_menu_apagar">Apagar tudo</string>
	<string name="str_menu_apagar_legenda">Apaga todos os dados</string>
	<string name="str_menu_finaliza_incompleto">Finalizar roteiro incompleto</string>
	<string name="str_menu_finaliza_incompleto_legenda">Selecione o roteiro para ser finalizado mesmo estando incompleto</string>
	<string name="str_menu_enviar_finalizados">Enviar imóveis lidos</string>
	<string name="str_menu_enviar_finalizados_legenda">Envia imóveis lidos</string>
	<string name="str_menu_roteiro_offline">Tornar roteiro offline</string>
	<string name="str_menu_roteiro_offline_legenda">Torna o roteiro offline</string>
	<string name="str_menu_roteiro_online">Tornar roteiro online</string>
	<string name="str_menu_roteiro_online_legenda">Torna o roteiro online</string>
	<string name="str_menu_gerar_retorno">Gerar arquivo retorno completo</string>
	<string name="str_menu_gerar_retorno_legenda">Gera arquivo retorno</string>
	<string name="str_menu_rota">Rota de marcação</string>
	<string name="str_menu_rota_legenda">%1$s Rota de marcação</string>
	<string name="str_menu_confirma_apagar">Tem certeza que deseja apagar os dados?</string>
	<string name="str_menu_confirma_finalizar">A rota será finalizada e o aplicativo será fechado. Digite a senha se tem certeza.</string>
	<string name="str_menu_confirma_enviar">Os imóveis lidos serão enviados. Digite a senha se tem certeza.</string>
	<string name="str_menu_contraste">Definir Contraste</string>
	<string name="str_menu_transformar_online">Tem certeza que deseja transformar o roteiro para Online?</string>
	<string name="str_sucesso_transformar_roteiro_online">Roteiro transformado para OnLine com sucesso!</string>
	<string name="str_menu_transformar_offline">Tem certeza que deseja transformar o roteiro para Offline?</string>
	<string name="str_sucesso_transformar_roteiro_offline">Roteiro transformado para OffLine com sucesso!</string>
	<string name="str_menu_alert_nao_lido">Não há imóveis lidos e não enviados</string>
	<string name="str_menu_alert_imoveis_finalizar">Erro Roteiro, Ainda há imóveis a percorrer! %1$s de %2$s</string>
	<string name="str_menu_sair">Sair</string>
	<string name="str_menu_sair_legenda">Sair do sistema</string>
	<string name="str_menu_confirma_sair">Deseja sair do sistema?</string>
	<string name="str_menu_inverter_roteiro">Inverter Roteiro</string>
	<string name="str_menu_inverter_roteiro_legenda">Inverter a sequencia de leitura dos imóveis.</string>
	<string name="str_menu_roteiro_invertido">Roteiro invertido com sucesso.</string>
	<string name="str_menu_exportar_bd">Exportar Base de Dados</string>
	<string name="str_menu_exportar_bd_legenda">Exporta base de dados para cartão de memória do celular</string>
	<string name="str_alert_exportar_bd">Base de Dados exportada com sucesso!</string>
	<string name="str_menu_contraste_legenda">Define o nível de Contraste a ser utilizado durante a impressão da conta</string>
	    <string name="str_rota_marcacao_desativar">A marcação de rota já está ativa, você confirma que a marcação será desativada?</string>
	    <string name="str_rota_marcacao_exite_imovel_calculado">Não é possível ativar rota de marcação, já existe imóvel com leitura realizada.</string>
	    <string name="str_rota_marcacao_ativar">Deseja ativar rota de marcação?</string>
	    <string name="str_rota_marcacao_habilitada">Rota de marcação ativa.</string>
	    <string name="str_rota_marcacao_desabilitada">Rota de marcação desativada.</string>
	<string name="str_susseco_apagar_tudo">Banco de dados apagado</string>
	<string name="str_falha_apagar_tudo">Banco de dados não removido</string>
	<string name="str_menu_alert_apagar_tudo">A ROTA SERÁ FINALIZADA E O APLICATIVO SERÁ FECHADO, TEM CERTEZA?</string>
	<string name="str_tab_hidrometro">Água</string>
	<string name="str_tab_poco">Poço</string>
	<string name="str_tab_tab4name">tabInfo</string>
	<string name="str_tab_conta">Conta</string>
	<string name="str_tab_info">Informações Gerais</string>
	<string name="str_tab_tabConta">tabConta</string>
	<string name="str_tab_menu_imprimir">Imprimir</string>
	<string name="str_tab_menu_ratear">Ratear</string>
	<string name="str_tab_menu_calcular">Calcular</string>
	<string name="str_tab_menu_voltar">Voltar Menu Principal</string>
	<string name="str_impressao_problema">Problema no envio,reenviar?</string>
	<string name="str_impressao_erro">Ocorreu um erro ao imprimir.</string>
	<string name="str_hidrometro_leitura">Leitura:</string>
	<string name="str_hidrometro_anormalidade">Anormalidade:</string>
	<string name="str_hidrometro_local">Loc Inst.:</string>
	<string name="str_hidrometro_endereco">Endereço</string>
	<string name="str_hidrometro_hidrometro">Hidrômetro:</string>
	<string name="str_hidrometro_alert_mes_anterior">Este imóvel não apresentou anormalidade informada no mês anterior. Deseja confirmar o código?</string>
	<string name="str_hidrometro_alert_mes_anterior_diferente">O código informado é diferente do mês anterior. Deseja confirmar o código?</string>
	<string name="str_hidrometro_alert_hidrometro_calcada">O hidrômetro se localiza na calçada. Deseja confirmar o código?</string>
	<string name="str_hidrometro_alert_hidrometro_substituido">O hidrômetro foi substituído no mês anterior. Deseja confirmar o código</string>
	<string name="str_hidrometro_alert_campos_branco">O hidrômetro foi substituído no mês anterior. Deseja confirmar o código</string>
	<string name="str_hidrometro_alert_anormalidade_inativa">Anormalidade inativa.</string>
	<string name="str_hidrometro_alert_agua_igual_poco">Leitura de água igual a de poço. Deseja confirmar?</string>
	<string name="str_hidrometro_rota">Rota:</string>
	<string name="str_imoveis_hidrometro_agua">Hidrômetro Água:</string>
	<string name="str_imoveis_barra_titulo">LISTA DE IMÓVEIS</string>
	<string name="str_imoveis_hidrometro_esgoto">Hidrômetro Esgoto:</string>
	<string name="str_imoveis_spinner_todos">Todos</string>
	<string name="str_imoveis_spinner_posicao">Posição</string>
	<string name="str_imoveis_spinner_sequencial_rota">Sequencial Rota</string>
	<string name="str_imoveis_spinner_imoveis_revisitar">Imóveis a revisitar</string>
	<string name="str_imoveis_spinner_quadra">Quadra</string>
	<string name="str_imoveis_spinner_hidrometro">Hidrômetro</string>
	<string name="str_imoveis_spinner_imoveis_nao_lidos">Imóveis não lidos</string>
	<string name="str_imoveis_alert_pesquisa">Pesquisa sem sucesso.</string>
	<string name="str_imoveis_alert_pesquisa_vazia">Informe o dado de pesquisa.</string>
	<string name="str_imoveis_legenda_titulo">Legendas</string>
	<string name="str_imoveis_legenda_vermelho">Vermelho: Imóvel não visitado.</string>
	<string name="str_imoveis_legenda_amarelo">Amarelo: Conta calculada mas não impressa.</string>
	<string name="str_imoveis_legenda_verde">Verde: Conta calculada e impressa.</string>
	<string name="str_imoveis_legenda_azul">Azul: Imóvel é um condomínio.</string>
	<string name="str_conta_inscricao">Inscrição:</string>
	<string name="str_conta_leitura">Leitura Faturada de Água:</string>
	<string name="str_conta_consumo_agua">Consumo de Água:</string>
	<string name="str_conta_consumo_tipo_agua">Consumo Tipo Água:</string>
	<string name="str_conta_consumo_tipo_esgoto">Consumo Tipo Esgoto:</string>
	<string name="str_conta_anormalidade_agua">Anorm. Cons. Água:</string>
	<string name="str_conta_anormalidade_esgoto">Anorm. Cons. Esgoto:</string>
	<string name="str_conta_valor_agua">Valor da Água: R$</string>
	<string name="str_info_gerais">Informações gerais do imóvel</string>
	<string name="str_info_ligacao_agua">Sit. Lig. Água:</string>
	<string name="str_info_ligacao_esgoto">Sit. Lig. Esgoto:</string>
	<string name="str_info_economias">Economias</string>
	<string name="str_info_subcategoria">SubCategoria</string>
	<string name="str_info_codigo">Cod.Cat</string>
	<string name="str_info_matricula">Matrícula:</string>
	<string name="str_info_inscricao">Inscrição:</string>
	<string name="str_sequencial">Sequencial de Rota:</string>
    <string name="str_sair_carregamento">Sair</string>
    <string name="str_download_progress_titulo">Carregando o arquivo. Por favor, aguarde&#8230;</string>
</resources>