<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fundotela" >

   <ScrollView android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    
       <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
          android:layout_height="fill_parent" >    
    
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" >    
		
        <TextView
            android:id="@+id/versao"
            style="@style/label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" 
            android:textSize="15sp"
            android:text="1212"
            android:paddingBottom="8pt">
            
        </TextView>
        
		<ImageView
		    android:id="@+id/imgTopLogin"
		    android:layout_width="fill_parent"
		    android:layout_height="150dip"
		    android:src="@drawable/logo_gsan_impressao" >
		</ImageView>
		
	</LinearLayout>
	
	<LinearLayout 
	    android:orientation="vertical" 
	    android:layout_width="210dp" 
	    android:layout_height="fill_parent"
	    android:layout_marginTop="5pt"
	    android:layout_gravity="center">
		
		<TextView style="@style/label" android:text="@string/str_login_user" android:textSize="15sp"></TextView>

		<EditText
		    android:id="@+id/edtLogin"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textEmailAddress" >

		</EditText>
	
		<TextView style="@style/label" android:text="@string/str_login_pass" android:textSize="15sp"></TextView>
			
		<EditText 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:id="@+id/edtPassword" 
		    android:password="true" >
		    
		</EditText>
	
	
	<LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
          android:layout_height="fill_parent" >
          
	   <Button android:text="@string/str_sair_login" 
		    android:id="@+id/btSair" 
		    android:layout_height="wrap_content" 
		    android:layout_gravity="center"
		       android:textColor="#000000" 
		       android:layout_width="0dip"
		    android:layout_weight="0.5"></Button>
		    
		<Button android:text="@string/str_login_login" 
		    android:id="@+id/btLogin" 
		    android:layout_height="wrap_content" 
		    android:layout_gravity="center"
		       android:textColor="#000000"
		       android:layout_width="0dip"
		      android:layout_weight="0.5"></Button>
		</LinearLayout>
		
	</LinearLayout>
	
	    </LinearLayout>
  
	</ScrollView>
</LinearLayout>